nullaway_error_2c0fb9cc-40e4-488e-ab42-688d41cc6e76.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/AbstractInstanceRegistry.java:910: error: [NullAway] dereferenced expression applications is @Nullable
                    for (Application application : applications.getRegisteredApplications()) {
                                                               ^
